--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>FreshFinds - Venta de Proveedores</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="https://www.paypal.com/sdk/js?client-id=@OrestesLopez2525&currency=EUR"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=AX3n_HlYc49cFkOZ3GcnGr1cUBKcyt2qGHYGoDI7JmiP8Xf4uWdO9-6u4L40eYYLy-Xs-L5rgIuyqpir&currency=EUR"></script>
 
 </head>
 <body>
