--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
     </section>
 
   </main>
+<section id="pago-prueba" class="prueba-pago">
+  <h2>Pago de prueba - 0€</h2>
+  <p>Paga 0€ para probar el proceso de pago.</p>
+  <div id="paypal-button-prueba"></div>
+</section>
 
   <footer>
     <h3>Contacto</h3>
